[package]
name = "screeps-arena-starter-rust"
version = "0.0.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
fern = "0.6"
screeps-arena-game-api = { git = "https://github.com/rustyscreeps/screeps-arena-game-api.git", branch = "arena" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

#dynamic_plan_tree = { git = "https://github.com/wzli/DynamicPlanTree.git" }
dynamic_plan_tree = { path = "../../DynamicPlanTree/dynamic_plan_tree" }
serde = {version = "1.0", features = ["derive"]}
tracing = {version = "0.1", features = ["attributes", "log"], default-features = false}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[features]
default = ["arena-spawn-and-swamp"]

arena-capture-the-flag = ["screeps-arena-game-api/arena-capture-the-flag"]
arena-spawn-and-swamp = ["screeps-arena-game-api/arena-spawn-and-swamp"]
arena-collect-and-control = ["screeps-arena-game-api/arena-collect-and-control"]
